# sync_agents

QuantumFoundry/: pyproject.toml
QuantumFoundry/QF_sync_agents/: SC_qubit_datastruct_v0_clean_data.py  SC_qubit_datastruct_v0_config.py  SC_qubit_datastruct_v0_sync.py  SC_qubit_datastruct_v1_config.py  SC_qubit_datastruct_v1_sync.py
QuantumFoundry/QF_sync_agents/characterization/: csv_conversion_test.py  sync_characterization.py  sync_characterization_config.py
QuantumFoundry/converters/: README.md  pyproject.toml
QuantumFoundry/converters/QF_converters/: SQ_charac_csv_to_hdf5.py
QuantumFoundry/fab_team_folder_structure_generator/: README.MD  folder_config.yaml  folder_maker.py
QuantumFoundry/tests/characterization_group/: HighPowerSweep_B002019D02_1.csv  add_data_source.py  create data structure.py  mock_data_structure.py  reorganize_old_data.py  run_sync_test.py  test.ipynb
QuantumFoundry/tests/characterization_group/data/Project_A/SUB123/1698762600.0_Type1/: info.json  measurement.csv  metadata.json
QuantumFoundry/tests/characterization_group/data/Project_A/SUB123/1698828300.0_Type2/: info.json  metadata.json
QuantumFoundry/tests/characterization_group/data/Project_A/SUB123/1727770500.0_Type3/: info.json  metadata.json
QuantumFoundry/tests/characterization_group/data/Project_A/SUB123/1728993600.0_Type1/: info.json  metadata.json
QuantumFoundry/tests/characterization_group/data/Project_A/SUB123/1730479682.655075_Type1/: info.json  metadata.json
QuantumFoundry/tests/characterization_group/data/Project_A/SUB123/1730479685.655073_Type3/: info.json  (+1 more)
(+52 files in other folders)
